Update docs and fix that overflow

--- a/css/main.scss
+++ b/css/main.scss
@@ -5,6 +5,7 @@ body {
   font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   font-weight: 300;
+  overflow-x: hidden;
 }
 
 h1,
